.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconppsched__c.object
<CustomObject>
    <description>soconppsched__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconppsched_soconpp__c&amp; &apos;_&apos; &amp;TEXT(rstk__soconppsched_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__soconppsched_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_date__c</fullName>
        <inlineHelpText>The anticipated Scheduled Ship Date for the given Contract Product for Purchase. Must be a valid date greater than or equal to TODAY.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_icustinstaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A valid Ship-To Address for the Installation Customer.  Defaults to the Default Installation Address for the Installation Customer.</inlineHelpText>
        <label>Installation Customer Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Contract Purchase Product Schedules (Installation Customer Address)</relationshipLabel>
        <relationshipName>soconppscheds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_installcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Contract Installation Customer.  Must be a valid Related Customer associated with the Contract Customer.</inlineHelpText>
        <label>Purchase Installation Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Purchase Product Schedules</relationshipLabel>
        <relationshipName>soconppscheds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_qty__c</fullName>
        <inlineHelpText>The quantity scheduled for the Scheduled Ship date defined on this record. Must be a quantity less than or equal to the Commitment Quantity.</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_soconpp__c</fullName>
        <inlineHelpText>The Contract Product for Purchase Detail record that this scheduled Ship Date applies.</inlineHelpText>
        <label>Contract Products for Purchase</label>
        <referenceTo>rstk__soconpp__c</referenceTo>
        <relationshipLabel>Purchase Schedules</relationshipLabel>
        <relationshipName>soconppscheds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_staddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A valid Ship-To Address for the Sales Customer. Defaults to the Default Ship-To Address for the Sales Customer.</inlineHelpText>
        <label>Sales Customer Ship-To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Contract Purchase Product Schedules</relationshipLabel>
        <relationshipName>soconppscheds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconppsched_upgroup__c</fullName>
        <inlineHelpText>Upload Group is used to &quot;group&quot; together SO add records (using SOAPI object) where a SO Header and one or more SO Line &quot;adds&quot; can be associated so as to result in a single SO with multiple lines.</inlineHelpText>
        <label>Sales Order Upload Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Purchase Product Schedule</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Purchase_Product_Schedules</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconppsched_soconpp__c</columns>
        <columns>rstk__soconppsched_qty__c</columns>
        <columns>rstk__soconppsched_date__c</columns>
        <columns>rstk__soconppsched_installcust__c</columns>
        <columns>rstk__soconppsched_icustinstaddr__c</columns>
        <columns>rstk__soconppsched_staddr__c</columns>
        <columns>rstk__soconppsched_upgroup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Purchase Product Schedules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Purchase Product Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Purchase Product Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Date</fullName>
        <active>true</active>
        <description>Date is Required.</description>
        <errorConditionFormula>ISBLANK(rstk__soconppsched_date__c)</errorConditionFormula>
        <errorMessage>Date is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Installation_Customer_Address</fullName>
        <active>true</active>
        <description>Installation Customer Address is Required and should belong to Sales Customer Ship-To Address Customer .</description>
        <errorConditionFormula>ISBLANK( rstk__soconppsched_icustinstaddr__c ) || ( rstk__soconppsched_icustinstaddr__r.rstk__socaddr_custno__c &lt;&gt;  rstk__soconppsched_installcust__c ) ||  (!rstk__soconppsched_icustinstaddr__r.rstk__socaddr_useasinstall__c &amp;&amp; !rstk__soconppsched_icustinstaddr__r.rstk__socaddr_defaultinstall__c )</errorConditionFormula>
        <errorMessage>Installation Customer Address is Required and should belong to Sales Customer Ship-To Address Customer .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Purchase_Installation_Customer</fullName>
        <active>true</active>
        <description>Purchase Installation Customer is Required.</description>
        <errorConditionFormula>ISBLANK(rstk__soconppsched_installcust__c )</errorConditionFormula>
        <errorMessage>Purchase Installation Customer is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Quantity</fullName>
        <active>true</active>
        <description>Quantity is Required and must be greater than zero.</description>
        <errorConditionFormula>ISBLANK(rstk__soconppsched_qty__c)  || rstk__soconppsched_qty__c &lt;= 0</errorConditionFormula>
        <errorMessage>Quantity is Required and must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Customer_ShipTo_Address</fullName>
        <active>true</active>
        <description>Sales Customer Ship-To Address is Required and should belong to Contract Customer Number.</description>
        <errorConditionFormula>ISBLANK(rstk__soconppsched_staddr__c) || ( !ISBLANK(rstk__soconppsched_upgroup__c ) &amp;&amp;  ISCHANGED(rstk__soconppsched_staddr__c)  ) ||  (rstk__soconppsched_staddr__r.rstk__socaddr_custno__c &lt;&gt;  rstk__soconppsched_soconpp__r.rstk__soconpp_socontract__r.rstk__socontract_sohdrcust__c ) || (!rstk__soconppsched_staddr__r.rstk__socaddr_useasshipto__c )</errorConditionFormula>
        <errorMessage>Sales Customer Ship-To Address is Required and should belong to Contract Customer Number.</errorMessage>
    </validationRules>
</CustomObject>